[project]
name = "gaze-estimation-lib"
version = "0.1.7"
description = "Gaze augmentation stage: attach gaze (yaw/pitch + gaze_vec) using face boxes in upstream JSON."
readme = "README.md"

authors = [
    { name = "Surya Chand Rayala", email = "suryachand2k1@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = "==3.10.*"
dependencies = [
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gaze"]
